test/badForget.slq
// args: --run

def main(){
	x:=0:ğ”¹;
	forget(x=1:ğ”¹); // error
}
